force-app/main/default/objects/Payments_Received__c/Payments_Received__c.object-meta.xml
<CustomObject>
    <description>A child object of Invoice to keep track of Deposit and Balance payments recieved</description>
    <label>Payment Received</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Payments Received Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments Received</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>