force-app/main/default/objects/Payments_Received__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>The date on which the payment was received</inlineHelpText>
    <label>Payment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>